tests/syntax/oracle/cert_msc_38.3.res.oracle
[kernel] Parsing cert_msc_38.c (with preprocessing)
[kernel:CERT:MSC:38] cert_msc_38.c:43: Warning: 
  va_start is a standard macro. Its definition cannot be suppressed, see CERT C coding rules MSC38-C
[kernel] cert_msc_38.c:43: User Error: 
  Cannot resolve variable va_start
  41    // error: can't suppress va_* macros
  42    #ifdef TEST_VASTART
  43    void *(*test1)() = &(va_start);
                             ^^^^^^^^
  44    #endif
  45
[kernel] Frama-C aborted: invalid user input.
